tests/integration/pilot/test_artifacts/pilot-cdb63eb262f9489794e3c1898/TestTraffic/virtualservice/set_host_header_in_destination/a/to_tproxy/_test_context/VirtualService.2471201285.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-88348
spec:
  hosts:
  - tproxy
  http:
  - route:
    - destination:
        host: tproxy
      headers:
        request:
          set:
            Host: my-custom-authority
